--- a/index.html
+++ b/index.html
@@ -36,11 +36,11 @@
         </section>
         <section id="presence">
             <h2>Presença</h2>
-                <p>Mantemos registro da presença dos alunos em aula, para que possamos acompanhar o desenvolvimento de cada.</p>
+                <p>Mantemos registro da presença dos alunos em aula, para que possamos acompanhar o desenvolvimento de cada um individualmente.</p>
         </section>
         <section id="feedbacks">
             <h2>Feedbacks</h2>
-                <p>Possuímos uma aba para que os alunos possam postar seus feedbacks sobre as aulas e instrutores.</p>
+                <p>Possuímos uma aba para os alunos postarem seus feedbacks sobre as aulas e instrutores.</p>
         </section>
     </main>
 </body>
