--- a/login.html
+++ b/login.html
@@ -17,11 +17,12 @@
             <input type="password" id="password" name="password"><br><br>
             <input type="submit" value="Login">
         </form>
+         <input type="checkbox" name="manterlogado" id="manterlogado" value="" /> 
+            <label for="manterlogado">Manter-me logado</label>
         <p class="link">  
             Não tem Conta?
             <a href="#cadastro"> Cadastre-se </a>
-            <p class="link">  
-                <a href="#cadastro"> Recupere sua senha </a>
+          
     </main>
     <footer>
         <p>&copy; 2024 ZYOGA. Todos os direitos reservados.</p>
