--- a/index.html
+++ b/index.html
@@ -43,5 +43,8 @@
                 <p>Possuímos uma aba para os alunos postarem seus feedbacks sobre as aulas e instrutores.</p>
         </section>
     </main>
+    <footer>
+            <p>&copy; 2024 ZYOGA. Todos os direitos reservados.</p>
+    </footer>
 </body>
 </html>  
