--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     <main>
         <section id="courses">
-            <h2>Cursos dispoíveis</h2>
+            <h2>Cursos disponíveis</h2>
                 <p>Oferecemos diversas aulas com professores voluntários, cada qual com sua especialidade.</p>
                 <p>Cursos: 
                     <ul>
