--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
         <ul>
             <li><a href="#courses">Cursos</a></li>
             <li><a href="#presence">Presença</a></li>
-            <li><a href="#feedbacks">Feedbacks</a></li>
-            <li><a href="cadastroprofessor.html">Cadastro do Professor</a></li>
+            <li><a href="feedback.html">Feedbacks</a></li>
+            <li><a href="cadastroprof.html">Cadastro do Professor</a></li>
             <li><a href="login.html">Login</a></li>
             <li><a href="cadastro.html">Cadastro do Aluno</a></li>
         </ul>
