--- a/indexteste.html
+++ b/indexteste.html
@@ -8,13 +8,14 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Esteban&display=swap" rel="stylesheet">
+    <a href="https://ibb.co/jfXFzFc"></a>
 
     
 </head>
 
 <body>
     <header>
-        <h1>Bem-vindo ao ZYOGA</span></h1> <img src="bixinho.png" width=310 height=250>
+        <h1>Bem-vindo ao ZYOGA</span></h1> <img src="https://i.ibb.co/RbwWNWx/bixinho.png" alt="bixinho" width=310 height=250>
     </header>
     <nav>
         <ul>
