--- a/index.html
+++ b/index.html
@@ -4,21 +4,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ZYOGA</title>
+    <link rel="stylesheet" href="main.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Esteban&display=swap" rel="stylesheet">
+
+    
 </head>
 
 <body>
     <header>
-        <h1>Bem-vindo ao ZYOGA</h1>
+        <h1>ZYOGA</span></h1> <img src= width=310 height=250>
     </header>
     <nav>
-        <ul>
-            <li><a href="#courses">Cursos</a></li>
-            <li><a href="#presence">Presença</a></li>
-            <li><a href="feedback.html">Feedbacks</a></li>
-            <li><a href="cadastroprof.html">Cadastro do Professor</a></li>
-            <li><a href="login.html">Login</a></li>
-            <li><a href="cadastro.html">Cadastro do Aluno</a></li>
-        </ul>
+
+        <div class="btn-group">
+            <button class="button"><a href="#courses">Cursos </a></button>
+            <button class="button"><a href="#presence">Presença</a></button>
+            <button class="button"><a href="#aluno">Aluno</a></button>
+            <button class="button"><a href="#professor">Professor</a></button>
+            <button class="button"><a href="#feedbacks">Feedbacks</a></button>
+            <button class="button"><a href="#login">Login</a></button>
+        </div>
+       
     </nav>
 
     <main>
