--- a/login.html
+++ b/login.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <header>
-        <h1>Portal de Login - ZYOGA </h1>
+        <h1></span></h1> <img href="https://imgbb.com/"><img src="https://i.ibb.co/KX32jxV/Design-sem-nome-removebg-preview.png" alt="Design-sem-nome-removebg-preview" border="0"></a>
     </header>
     <main>
         <form action="dashboard.html" method="post">
@@ -20,7 +20,7 @@
          <input type="checkbox" name="manterlogado" id="manterlogado" value="" /> 
             <label for="manterlogado">Manter-me logado</label>
         <p class="link">  
-            Não tem Conta?
+        
             <a href="#cadastro"> Cadastre-se </a>
           
     </main>
