--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ZYOGA</title>
+    <title></title>
     <link rel="stylesheet" href="main.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -14,32 +14,34 @@
 
 <body>
     <header>
-        <h1>ZYOGA</span></h1> <img src="https://i.ibb.co/RbwWNWx/bixinho.png" alt="bixinho" width=310 height=250>
+        <h1></span></h1> <img <a href="https://imgbb.com/"><img src="https://i.ibb.co/hmxh6sp/Zyoga-removebg-preview.png" alt="Zyoga-removebg-preview">
     </header>
     <nav>
 
-        <div class="btn-group">
+        <div>
             <button class="button"><a href="#courses">Cursos </a></button>
             <button class="button"><a href="#presence">Presença</a></button>
-            <button class="button"><a href="#aluno">Aluno</a></button>
-            <button class="button"><a href="#professor">Professor</a></button>
+       
             <button class="button"><a href="#feedbacks">Feedbacks</a></button>
-            <button class="button"><a href="#login">Login</a></button>
+            <button class="button"><a href="http://127.0.0.1:3000/login.html">Login</a></button>
         </div>
        
     </nav>
 
     <main>
         <section id="courses">
-            <h2>Cursos disponíveis</h2>
+            <h2>Cursos disponíveis</h2> 
                 <p>Oferecemos diversas aulas com professores voluntários, cada qual com sua especialidade.</p>
                 <p>Cursos: 
-                    <ul>
-                        <li>Hatha Yoga</li>
-                        <li>Ashtanga Yoga</li>
-                        <li>Kundalini Yoga</li>
-                        <li>Vinyasa Yoga</li>
-                    </ul>
+                    <div class="w3-container w3-center">
+  <h2></h2>
+                     <li>Hatha Yoga</li>
+                     <li>Ashtanga Yoga</li>
+                     <li>Kundalini Yoga</li>
+                     <li>Vinyasa Yoga</li>
+  
+</div>
+
                 </p>
         </section>
         <section id="presence">
