--- a/index.html
+++ b/index.html
@@ -27,21 +27,16 @@
 
         <div>
             <button class="button"><a href="#courses">Cursos </a></button>
-            <div id="menuContent">
-                <ul>
-                  <li><a href="#">Item 1</a></li>
-                  <li><a href="#">Item 2</a></li>
-                  <li><a href="#">Item 3</a></li>
-                </ul>
-              </div>
             <button class="button"><a href="#presence">Presença</a></button>
-       
             <button class="button"><a href="#feedbacks">Feedbacks</a></button>
             <button class="button"><a href="http://127.0.0.1:3000/login.html">Login</a></button>
         
         </div>
 
             <p>&copy; 2024 ZYOGA. Todos os direitos reservados.</p>
+    </footer>
+</body>
+</html>  
     </footer>
 </body>
 </html>  
