--- a/login2.html
+++ b/login2.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title></title>
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="style2.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Esteban&display=swap" rel="stylesheet">
@@ -45,6 +45,9 @@
           <label for="password">Senha:</label><br>
           <input type="password" id="password" name="password"><br><br>
           <button id="Entrar">Entrar</button>
+          <body style="background-image: url('caminho/para/sua/imagem.jpg'); background-size: cover; background-position: center;">
+          
+        </body>
           
           <br></br>
 
