--- a/cadastroprof.html
+++ b/cadastroprof.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" href="cadastro.css">
+    <link rel="stylesheet" href="cadastroprof.css">
     <meta charset="UTF-8">
     </head>
 <title> Cadastro ZYOGA </title>
