--- a/feedback.html
+++ b/feedback.html
@@ -3,6 +3,9 @@
   <head>
     <link rel="stylesheet" href="cadastro.css">
     <meta charset="UTF-8">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Crimson+Pro:ital,wght@0,200..900;1,200..900&display=swap" rel="stylesheet">
     </head>
 <title> Cadastro ZYOGA </title>
 
