--- a/feedback.html
+++ b/feedback.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" href="cadastro.css">
+    <link rel="stylesheet" href="feedback.css">
     <meta charset="UTF-8">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -44,7 +44,7 @@
     <textarea rows="10" cols="50"> </textarea>
 
     <form action="/upload" method="post" enctype="multipart/form-data">
-        <label for="media">Caso queira enviar uma imagem:</label>
+        <label for="media">Envio de imagens</label>
         <input type="file" id="media" name="media" accept="image/*">
         <input type="submit" value="Fazer Upload"><br><br>
         
