--- a/login.html
+++ b/login.html
@@ -28,7 +28,8 @@ content="width=device-width, initial-scale=1">
 
     
 </div>
-
+<a href="#" class="floating-btn">Fale conosco</a>
+  </a>
 
 </head>
 <body>
