--- a/feedback.html
+++ b/feedback.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Crimson+Pro:ital,wght@0,200..900;1,200..900&display=swap" rel="stylesheet">
     </head>
-<title> Cadastro ZYOGA </title>
+<title> Feedback ZYOGA </title>
 
 <div class="header">
   <a href="https://ibb.co/TP0jm03"><img src="https://i.ibb.co/VMCn2C4/eef5afc6-2f39-4e61-80ba-beb6f7e7c423.jpg" alt="eef5afc6-2f39-4e61-80ba-beb6f7e7c423" border="0"></a><br /><a target='_blank' href='https://pt-br.imgbb.com/'></a><br/>
