--- a/Quemsomos.html
+++ b/Quemsomos.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" href="cadastro.css">
+    <link rel="stylesheet" href="quemsomos.css">
     <meta charset="UTF-8">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -23,7 +23,3 @@
       <button class="button">Cadastro</button>
       <button class="button">Login</button>
   
-      <body>
-        <h1>Minha Imagem</h1>
-        <img href="https://ibb.co/YtpJsg6"><img src="https://i.ibb.co/YtpJsg6/Die-Wirkweise-von-Yoga-Nidra.jpg" alt="Die-Wirkweise-von-Yoga-Nidra" border="0">
-    </body>
