--- a/cadastro.html
+++ b/cadastro.html
@@ -1,36 +1,35 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <link rel="stylesheet" href="cadastro.css">
-    <meta charset="UTF-8">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Crimson+Pro:ital,wght@0,200..900;1,200..900&display=swap" rel="stylesheet">
-    </head>
-<title> Cadastro ZYOGA </title>
+<html lang="en">
+<head>
+<link rel="stylesheet" href="cadastro.css">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap" rel="stylesheet">
 
-<div class="header">
-  <a href="https://ibb.co/TP0jm03"><img src="https://i.ibb.co/VMCn2C4/eef5afc6-2f39-4e61-80ba-beb6f7e7c423.jpg" alt="eef5afc6-2f39-4e61-80ba-beb6f7e7c423" border="0"></a><br /><a target='_blank' href='https://pt-br.imgbb.com/'></a><br/>
-</div>
+<title>Login - ZYOGA </title>
+<meta charset="utf-8">
+<meta name="viewport" 
+content="width=device-width, initial-scale=1">
+</head>
 
 <body>
-  
-
-  <div class="btn-group">
-    <button class="button">Início</button>
-    <button class="button">Quem somos</button>
-    <button class="button">Tipos de Yoga</button>
-    <button class="button">Feedbacks</button>
-    <button class="button">Cadastro</button>
-    <button class="button">Login</button>
-
-     </div>
- <div class="cadastro-aluno">
-    <p id="cadastro"> <h2>Cadastro de Aluno </h2> </p>
- <p id="link"> Já tem conta? 
-  <a href="#paralogin"> Ir para Login </a>
-  </p>
-</div>
+    
+    <nav>
+        <div class="logo"><a href="https://imgbb.com/"><img src="https://i.ibb.co/QXxrvWW/Predicado-Nominal-Predicado-Verbal-Predicado-Verbo-nominal-2.png" alt="Predicado-Nominal-Predicado-Verbal-Predicado-Verbo-nominal-2" height="80" ></a></div>
+       
+        <div class="links">
+            <ul class="nav-itens">
+               <li><a href="#" id="af">Início</a></li>
+               <li><a href="#"id="af">Sobre nós</a></li>
+               <li><a href="#"id='af'>Cursos</a></li>
+               <li><a href="#"id='af'>Avaliações</a></li>
+            </ul>
+        </div>
+        <div class="btn">
+            <button href="#" class="login">Login</button>
+            <button href="#" class="cadastro">Cadastro</button>
+        </div>
+</nav>
  <main>
         <form action="">
             <div class="cadastro-aluno">
