--- a/Quemsomos.html
+++ b/Quemsomos.html
@@ -1,25 +1,78 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <link rel="stylesheet" href="quemsomos.css">
-    <meta charset="UTF-8">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Crimson+Pro:ital,wght@0,200..900;1,200..900&display=swap" rel="stylesheet">
-    </head>
-<title> Quem Somos </title>
-
-<div class="header">
-    <a href="https://ibb.co/TP0jm03"><img src="https://i.ibb.co/VMCn2C4/eef5afc6-2f39-4e61-80ba-beb6f7e7c423.jpg" alt="eef5afc6-2f39-4e61-80ba-beb6f7e7c423" border="0"></a><br /><a target='_blank' href='https://pt-br.imgbb.com/'></a><br/>
-  </div>
+* {
+    font-family: "Oswald", sans-serif;
+    font-optical-sizing: auto;
+    font-style: normal;
+    margin: 0;
+    padding: 0;
+    color: inherit; 
+    text-decoration: none;
+   }
   
-  <body>
+  nav {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    background-color:#77A290 ;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    font-size: 18px;
+  }
   
-    <div class="btn-group">
-      <button class="button">Início</button>
-      <button class="button">Quem somos</button>
-      <button class="button">Tipos de Yoga</button>
-      <button class="button">Feedbacks</button>
-      <button class="button">Cadastro</button>
-      <button class="button">Login</button>
+    ul {
+      list-style-type: none;
+      margin: 0;
+      padding: 0;
+     display: flex;
+    }
+     
+    li a {
+     color:  #fbeed3;
+     text-align: center;
+    padding: 30px 16px;
+    text-decoration: none;
+    }
+    
+    li a:hover {
+      background-color: #6D997A;
+    }
+  
+  .login {
+    padding: 10px 40px;
+    font-size: 15px;
+    border: none;
+    border-radius: 5px;
+    color: #202020;
+    background-color: #fff;
+    font-family: 'Poppins', sans-serif;
+    cursor: pointer;
+   
+  }
+  
+  .cadastro {
+    padding: 10px 40px;
+    font-size: 15px;
+    border: none;
+    border-radius: 5px;
+    color: #fff;
+    background-color: #42282c;
+    font-family: 'Poppins', sans-serif;
+    cursor: pointer;
+  }
+  
+  .cadastro:hover {
+    background-color: #3d3d3d;
+  }
+  
+  div.retangulo {
+    background-image: url(https://live.staticflickr.com/65535/53630130141_4ea8508526_k.jpg);
+    display: inline-block;
+    width: 100%;
+    height: 300px;
+  background-position: center;
+  box-shadow: px 0px 100px rgba(0, 0, 0, 0.1)}
+  
+ 
+  .final{
+   background-color: #77A290;
+  text-align: center;
+  }
   
