--- a/feedback1.html
+++ b/feedback1.html
@@ -23,6 +23,7 @@
                <li><a href="quemsomos.html"id="af">Sobre nós</a></li>
                <li><a href="tipos.html"id='af'>Cursos</a></li>
                <li><a href="feedback.html"id='af'>Avaliações</a></li>
+               <li><a href="profs.html"id='af'>Professores</a></li>
             </ul>
         </div>
         <div class="btn">
