--- a/cadastroprof1.html
+++ b/cadastroprof1.html
@@ -26,6 +26,7 @@ content="width=device-width, initial-scale=1">
                <li><a href="quemsomos.html"id="af">Sobre nós</a></li>
                <li><a href="tipos.html"id='af'>Cursos</a></li>
                <li><a href="feedback.html"id='af'>Avaliações</a></li>
+               <li><a href="profs.html"id='af'>Professores</a></li>
             </ul>
         </div>
         <div class="btn">
@@ -62,13 +63,6 @@ content="width=device-width, initial-scale=1">
         <label for="celular_cad">Celular</label>
         <input id="celular_cad" name="celular_cad" required="required" type="text"/><br>
       </p>
-
-      <!--<p class="section">
-        <strong>Experiência</strong> <br>
-        <label for="exp_I"><input type="checkbox" name="exp_I" id="exp_I"> Iniciante</label>
-        <label for="exp_II"><input type="checkbox" name="exp_II" id="exp_II"> Intermediário</label>
-        <label for="exp_III"><input type="checkbox" name="exp_III" id="exp_III"> Avançado</label>
-      </p>-->
 
       <p class="section">
         <strong>Especialidade</strong> <br>
