--- a/login1.html
+++ b/login1.html
@@ -27,6 +27,7 @@ content="width=device-width, initial-scale=1">
                <li><a href="quemsomos.html"id="af">Sobre nós</a></li>
                <li><a href="tipos.html"id='af'>Cursos</a></li>
                <li><a href="feedback.html"id='af'>Avaliações</a></li>
+               <li><a href="profs.html"id='af'>Professores</a></li>
             </ul>
         </div>
         <div class="btn">
