--- a/login.html
+++ b/login.html
@@ -27,7 +27,7 @@ content="width=device-width, initial-scale=1">
                <li><a href="quemsomos.html"id="af">Sobre nós</a></li>
                <li><a href="tipos.html"id='af'>Cursos</a></li>
                <li><a href="feedback.html"id='af'>Avaliações</a></li>
-                 <li><a href="profs.html"id='af'>Professores</a></li>
+               <li><a href="profs.html"id='af'>Professores</a></li>
             </ul>
         </div>
         <div class="btn">
@@ -62,10 +62,9 @@ content="width=device-width, initial-scale=1">
     </form>
     </div>
 </main>
-  
-           
-<footer class="final">   
-    <p><h6>&copy; 2024 ZYOGA. Todos os direitos reservados.<h6></p>
+       
+<footer class="footer">
+  <p>&copy; 2024 ZYOGA. Todos os direitos reservados.</p>
 </footer>
 </body> 
 </html>
