--- a/cadastroprof.html
+++ b/cadastroprof.html
@@ -64,7 +64,6 @@ content="width=device-width, initial-scale=1">
         <input id="celular_cad" name="celular_cad" required="required" type="text"/><br>
       </p>
 
-     
       <p class="section">
         <strong>Especialidade</strong> <br>
         <label for="tipo_I"><input type="checkbox" name="tipo_I" id="tipo_I"> Hatha Yoga</label>
@@ -79,10 +78,9 @@ content="width=device-width, initial-scale=1">
     </form>
   </main>
 
-  <footer class="final">   
-    <p><h6>&copy; 2024 ZYOGA. Todos os direitos reservados.<h6></p>
-</footer>
+  <footer class="footer">
+    <p>&copy; 2024 ZYOGA. Todos os direitos reservados.</p>
+  </footer>
 
 </body>
 </html>
-
