--- a/login.html
+++ b/login.html
@@ -31,8 +31,8 @@ content="width=device-width, initial-scale=1">
             </ul>
         </div>
         <div class="btn">
-            <button href="login.html" class="login">Login</button>
-            <button href="cadastro.html" class="cadastro">Cadastro</button>
+            <button onclick="window.location.href='login.html'" class="login">Login</button>
+            <button onclick="window.location.href='cadastro.html'" class="cadastro">Cadastro</button>
         </div>
 
         
