--- a/quemsomos.html
+++ b/quemsomos.html
@@ -31,15 +31,51 @@
         </div>
     </nav>
     <div class="retangulo"></div>
-    <div class="conteudo">
-        <div class="quadrado"></div>
-        <h3 class="titulo">Bem-vindo à Zyoga</h3>
-        <div class="texto">
-            <p>Bem-vindo à Zyoga, uma comunidade apaixonada pela prática da yoga e pela conexão com a natureza. Fundada com a crença de que a yoga não se limita apenas aos tapetes, mas é uma jornada que se desenrola em harmonia com o mundo ao nosso redor, Zyoga oferece uma experiência única onde a serenidade dos parques se torna o cenário perfeito para nutrir mente, corpo e espírito.</p>
-        </div>
+<div class="conteudo"> 
+    <div class="texto1">
+        <h1>Bem-vindo à Zyoga</h1>
+        <h3>A Zyoga é uma comunidade apaixonada pela prática da yoga e pela conexão com a natureza. Fundada com a crença de que a yoga não se limita apenas aos tapetes, mas é uma jornada que se desenrola em harmonia com o mundo ao nosso redor, Zyoga oferece uma experiência única onde a serenidade dos parques se torna o cenário perfeito para nutrir mente, corpo e espírito.</h3>
+        <br>
+        <br>    
+        <div class="caixaA">    
     </div>
-    <footer class="footer">
-        <p>&copy; 2024 ZYOGA. Todos os direitos reservados.</p>
-    </footer>
+    <br>
+    <br>
+<div class="conteudo">
+    <div class="texto2">
+        <h1>Nossos Pofessores São Voluntários</h1>
+        <p><h3>Nossa equipe é composta por instrutores dedicados e experientes, comprometidos em guiar nossos alunos em suas jornadas de autodescoberta e bem-estar. Com abordagens adaptáveis e aprofundadas em diversas linhas da yoga, nossas aulas são acessíveis a todos, desde iniciantes até praticantes avançados.</h3></p>
+        <br>
+        <br>
+ <div class="caixaV">
+    <br>
+    <br>
+    </div>
+    <br>
+    <br>
+<div class="conteudo">
+    </div>
+    <div class="texto3">
+        <h1>Nossos Conceitos</h1>
+    <p><h3>Na Zyoga, acreditamos que a yoga vai além da prática física; é uma filosofia de vida que nos ensina a encontrar equilíbrio, cultivar a consciência e viver com compaixão. Nossos valores de inclusão, respeito e bem-estar holístico guiam tudo o que fazemos, criando um espaço acolhedor e seguro para todos os que desejam embarcar nesta jornada conosco.</h3></p>
+        <br>
+        <br>
+    <div class="caixaB">
+    </div>
+    <br>
+    <br>
+<div class="conteudo">
+    <div class="texto4">
+        <h1>Sua Experiência Conosco</h1>
+    <p><h3>Junte-se a nós em nossas aulas nos belos parques da nossa cidade, onde cada respiração se funde com o ambiente tranquilo ao nosso redor, convidando-o a explorar seu potencial, encontrar equilíbrio e cultivar a paz interior. Sua jornada na Zyoga está apenas começando.</h3></p>
+        <br>
+        <br>
+<div class="caixaC">
+</div>
+<br>
+<br>
+<footer class="direitos">
+    <p>&copy; 2024 ZYOGA. Todos os direitos reservados.</p>
+</footer>
 </body>
-</html>
+</html>  
