--- a/cadastro.html
+++ b/cadastro.html
@@ -34,7 +34,7 @@ content="width=device-width, initial-scale=1">
     <button onclick="window.location.href='cadastro.html'" class="cadastro">Cadastro</button>
 
         </div>
-   <a class="floating-btn">Fale conosco</a><br>
+  <a href="#" class="floating-btn">Fale conosco</a><br>
         
     </nav>
     
