--- a/profs.html
+++ b/profs.html
@@ -63,7 +63,7 @@
         </div>
     </div>
 </main>
-
+ <a href="#" class="floating-btn">Fale conosco</a><br>
 <footer class="footer">
     <p>&copy; 2024 ZYOGA. Todos os direitos reservados.</p>
 </footer>
