--- a/tipos.html
+++ b/tipos.html
@@ -94,7 +94,7 @@ poderosa para promover o bem-estar físico, mental e emocional.</p>
            </div>
            <div class= "quadradoIII"></div>    
           </div>
-       
+       <a href="#cadastro"> Cadastre-se </a>
           <footer class="footer">
             <p>&copy; 2024 ZYOGA. Todos os direitos reservados.</p>
         </footer>
