--- a/quemsomos.html
+++ b/quemsomos.html
@@ -74,7 +74,7 @@
 </div>
 <br>
 <br>
-<a class="floating-btn">Fale conosco</a><br>
+<a href="#" class="floating-btn">Fale conosco</a><br>
 <footer class="direitos">
     <p>&copy; 2024 ZYOGA. Todos os direitos reservados.</p>
 </footer>
