--- a/quemsomos.html
+++ b/quemsomos.html
@@ -74,7 +74,10 @@
 </div>
 <br>
 <br>
-<a href="#" class="floating-btn">Fale conosco</a><br>
+
+<!-- Botão flutuante -->
+<a href="https://wa.me/61984233425" class="floating-button" target="_blank">Fale Conosco</a>
+
 <footer class="direitos">
     <p>&copy; 2024 ZYOGA. Todos os direitos reservados.</p>
 </footer>
