--- a/cadastro.html
+++ b/cadastro.html
@@ -34,7 +34,8 @@ content="width=device-width, initial-scale=1">
     <button onclick="window.location.href='cadastro.html'" class="cadastro">Cadastro</button>
 
         </div>
-  <a href="#" class="floating-btn">Fale conosco</a><br>
+<!-- Botão flutuante -->
+<a href="https://wa.me/61984233425" class="floating-button" target="_blank">Fale Conosco</a>
         
     </nav>
     
