--- a/feedback.html
+++ b/feedback.html
@@ -120,7 +120,8 @@
             
             
 
-<a href="#" class="floating-btn">Fale conosco</a><br>
+<!-- Botão flutuante -->
+<a href="https://wa.me/61984233425" class="floating-button" target="_blank">Fale Conosco</a>
 
 </main>
 
