--- a/login.html
+++ b/login.html
@@ -41,7 +41,6 @@ content="width=device-width, initial-scale=1">
 <main>
     <form action="">
     <div class="login-container">
-    <a href="#" class="floating-btn">Fale conosco</a><br>
     <p>
         <h2>Faça login</h2><br>
         <label for="username">Usuário:</label><br>
@@ -62,7 +61,8 @@ content="width=device-width, initial-scale=1">
     </form>
     </div>
 </main>
-       
+    <!-- Botão flutuante -->
+<a href="https://wa.me/61984233425" class="floating-button" target="_blank">Fale Conosco</a>
 <footer class="footer">
   <p>&copy; 2024 ZYOGA. Todos os direitos reservados.</p>
 </footer>
