--- a/tipos.html
+++ b/tipos.html
@@ -95,6 +95,8 @@ poderosa para promover o bem-estar físico, mental e emocional.</p>
            <div class= "quadradoIII"></div>    
           </div>
        <a href="#cadastro"> Cadastre-se </a>
+    <!-- Botão flutuante -->
+<a href="https://wa.me/61984233425" class="floating-button" target="_blank">Fale Conosco</a>
           <footer class="footer">
             <p>&copy; 2024 ZYOGA. Todos os direitos reservados.</p>
         </footer>
