--- a/inicio.html
+++ b/inicio.html
@@ -38,8 +38,8 @@
             </nav>
 
             <div class="btn">
-                <button href="login.html" class="login">Login</button>
-                <button href="cadastro.html" class="cadastro">Cadastro</button>
+                <button onclick="window.location.href='login.html'" class="login">Login</button>
+                <button onclick="window.location.href='cadastro.html'" class="cadastro">Cadastro</button>
             </div>
 
                        </header>
