--- a/inicio.html
+++ b/inicio.html
@@ -158,9 +158,8 @@
                 <p><i class="bi bi-envelope-fill"></i> <a href="mailto:contato@bruno.com.br">contato@ZYOGA.com.br</a></p>
             </div><!--line-footer-->
         </div><!--interface-->
-        <div class="final">   
-            <p><h6>&copy; 2024 ZYOGA. Todos os direitos reservados.<h6></p>
-          
-        </div>
+        <footer class="footer">
+            <p>&copy; 2024 ZYOGA. Todos os direitos reservados.</p>
+        </footer>
 
 </body>
