--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     <!-- BOOTSTRAP ICONS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <!-- FIM BOOTSTRAP ICONS -->
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="index.css">
 
     <script src="menu.js" defer></script>
 
-    <title>Agência BRN</title>
+    <title>Página Inicial</title>
 </head>
 <body>
     
