--- a/mainvideo.html
+++ b/mainvideo.html
@@ -13,7 +13,7 @@
             Seu navegador não tem suporte para vídeos
         </video>
        
-        <a href="http://127.0.0.1:3000/INDEX.HTML" class="btn">Conhecer</a> 
+        <a href="index.html" class="btn">Conhecer</a> 
     </header>
 </body>
 </html>
