--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
               
             <nav class="menu-desktop">
                 <ul>
-                    <li><a href="#">Inicio</a></li>
-                    <li><a href="#">Sobre nós</a></li>
-                    <li><a href="#">Cursos</a></li>
-                    <li><a href="#">Avaliações</a></li>
-                    <li><a href="#">Professores</a></li>
+                   <li><a href="index.html" id="af">Início</a></li>
+                   <li><a href="quemsomos.html"id="af">Sobre nós</a></li>
+                   <li><a href="tipos.html"id='af'>Cursos</a></li>
+                   <li><a href="feedback.html"id='af'>Avaliações</a></li>
+                   <li><a href="profs.html"id='af'>Professores</a></li>
                 </ul>
             </nav>
 
