--- a/feedback.html
+++ b/feedback.html
@@ -32,8 +32,8 @@
         </ul>
     </div>
     <div class="btn">
-        <button href="login.html" class="login">Login</button>
-        <button href="cadastro.html" class="cadastro">Cadastro</button>
+              <button onclick="window.location.href='login.html'" class="login">Login</button>
+              <button onclick="window.location.href='cadastro.html'" class="cadastro">Cadastro</button>
     </div>
 
   </nav>
