--- a/profs.html
+++ b/profs.html
@@ -55,7 +55,7 @@
                 Se você está interessado em se voluntariar como professor de yoga em nosso clube, por favor, entre em contato conosco o mais rápido possível para mais informações sobre como se envolver. Juntos, podemos fazer uma diferença positiva na vida de muitos e espalhar a luz do yoga em nossa comunidade.
             </p>
             <div class="inscreva-se">
-                <a href="cadastroprof.html" class="inscreva-se-btn">Inscreva-se</a>
+                <a href="cadastroprof.html" class="inscreva-se-btn">Marque a sua Presença</a>
             </div>
         </div>
         <div class="imagem">
