--- a/index.html
+++ b/index.html
@@ -130,8 +130,9 @@
                 <form action="">
                     <input type="text" name="" id="" placeholder="Seu nome completo:" required>
                     <input type="text" name="" id="" placeholder="Seu e-mail:" required>
-                    <input type="text" name="" id="" placeholder="Seu celular:">
-                    <textarea name="" id="" placeholder="Sua mensagem" required></textarea>
+                    <input type="text" name="" id="" placeholder="Tipo de Yoga">
+                    <textarea name="" id="" placeholder="Nivel de Experiência" required></textarea>
+                    <input type="text" name="" id="" placeholder=" Sugestão de Dia">
                     <div class="btn-enviar"><input type="submit" value="ENVIAR"></div>
                 </form>
             </div><!--interface-->
