--- a/index.html
+++ b/index.html
@@ -125,14 +125,14 @@
 
         <section class="formulario">
             <div class="interface">
-                <h2 class="titulo">FALA <span>COMIGO.</span></h2>
+                <h2 class="titulo">SUGESTÃODE <span>ENCONTRO.</span></h2>
 
                 <form action="">
                     <input type="text" name="" id="" placeholder="Seu nome completo:" required>
                     <input type="text" name="" id="" placeholder="Seu e-mail:" required>
-                    <input type="text" name="" id="" placeholder="Tipo de Yoga">
-                    <textarea name="" id="" placeholder="Nivel de Experiência" required></textarea>
-                    <input type="text" name="" id="" placeholder=" Sugestão de Dia">
+                    <input type="text" name="" id="" placeholder="Tipo de Yoga:">
+                    <textarea name="" id="" placeholder="Nivel de Experiência:" required></textarea>
+                    <input type="text" name="" id="" placeholder=" Sugestão de Dia:">
                     <div class="btn-enviar"><input type="submit" value="ENVIAR"></div>
                 </form>
             </div><!--interface-->
