--- a/index.html
+++ b/index.html
@@ -1,21 +1,27 @@
-<!DOCTYPE html>
-<html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- GOOGLE FONTS -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
-    <!-- FIM GOOGLE FONTES -->
-    <!-- BOOTSTRAP ICONS -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
-    <!-- FIM BOOTSTRAP ICONS -->
+<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+     <!-- GOOGLE FONTS -->
+     <link rel="preconnect" href="https://fonts.googleapis.com">
+     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+     <!-- FIM GOOGLE FONTES -->
+     <!-- BOOTSTRAP ICONS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet">
     <link rel="stylesheet" href="index.css">
 
-    <script src="menu.js" defer></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>  
+</head>
+  <body class="p-3 m-0 border-0 bd-example m-0 border-0">
+ 
 
     <title>Página Inicial</title>
+   
 </head>
 <body>
     
@@ -27,14 +33,23 @@
                     alt="Predicado-Nominal-Predicado-Verbal-Predicado-Verbo-nominal-2" 
                     height="80" ></a></div>
               
-            <nav class="menu-desktop">
-                <ul>
-                    <li><a href="index.html">Início</a></li>
-                    <li><a href="quemsomos.html">Sobre nós</a></li>
-                    <li><a href="tipos.html">Cursos</a></li>
-                    <li><a href="feedback.html">Avaliações</a></li>
-                    <li><a href="profs.html">Professores</a></li>
-                </ul>
+                         <ul class="nav nav-underline">
+                    <li class="nav-item">
+                      <a class="nav-link" aria-current="page" href="index.html">Início</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="quemsomos.html">Sobre nós</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="tipos.html">Cursos</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="feedback.html">Avaliações</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link" href="profs.html">Professores</a>
+                                      </li>
+                  </ul>
             </nav>
 
             <div class="btn">
@@ -162,5 +177,8 @@
         <footer class="footer">
             <p>&copy; 2024 ZYOGA. Todos os direitos reservados.</p>
         </footer>
+
+</body>
+
 
 </body>
