aplicação do bootstrap em cadastro

--- a/cadastroprof.html
+++ b/cadastroprof.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Xeg5KBm9lLW87ZEtS5QElQSQTfWRucureF1wC6YvT7r8gRO6oPiipq6S7lmU2Q" crossorigin="anonymous">
 <link rel="stylesheet" href="cadastroprof.css">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -82,6 +83,7 @@ content="width=device-width, initial-scale=1">
   <footer class="footer">
     <p>&copy; 2024 ZYOGA. Todos os direitos reservados.</p>
   </footer>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-KJ3nfa3IC4V+YkX0szO3/5QzOMT913cQvQCZ4j2YQf7zPPi6hf7gQ2T+9W5D6W" crossorigin="anonymous"></script>
 
 </body>
 </html>
