--- a/feedback.html
+++ b/feedback.html
@@ -29,6 +29,7 @@
            <li><a href="tipos.html"id='af'>Cursos</a></li>
            <li><a href="feedback.html"id='af'>Avaliações</a></li>
            <li><a href="profs.html"id='af'>Professores</a></li>
+           <li><a href="calendario.html"id='af'>Calendario</a></li>
         </ul>
     </div>
     <div class="btn">
