--- a/cadastro.html
+++ b/cadastro.html
@@ -39,6 +39,9 @@
                     <li class="nav-item">
                         <a class="nav-link nav-item-disabled" href="profs.html">Professores</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="calendario.html">Calendario</a>
+                      </li>
                 </ul>
             </div>
         </nav>
